--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "caver-js": "^1.10.1",
-    "caver-js-ext-kas": "^1.12.0",
-    "dotenv": "^16.4.5"
+    "caver-js-ext-kas": "^1.1.2",
+    "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security"
   }
 }
