--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.7.2",
     "caver-js": "^1.10.1",
     "caver-js-ext-kas": "^1.1.2",
+    "csv": "^6.3.9",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security"
   }
